--- a/CALCULADORA_2/app/src/main/res/values/styles.xml
+++ b/CALCULADORA_2/app/src/main/res/values/styles.xml
@@ -14,6 +14,8 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
         <item name="android:gravity">center</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 
     <style name="Botones_oscuros">
@@ -22,5 +24,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">#9B9B9B</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 </resources>
